move `JavaScriptFilePredicate` back